--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,20 @@
 
   <name>Boomerang</name>
   <url>http://maven.apache.org</url>
-
-  <properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -31,6 +43,11 @@
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-core</artifactId>
       <version>5.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.vreco</groupId>
+      <artifactId>Util</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   
@@ -91,5 +108,9 @@
         <enabled>false</enabled>
       </releases>
     </repository>
+    <repository>
+      <id>cemerick-snapshots</id>
+      <url>https://github.com/vrecan/mvn-repo/raw/master/snapshots</url>
+    </repository>   
   </repositories>
 </project>
