--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.10</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -127,7 +127,7 @@
       </releases>
     </repository>
     <repository>
-      <id>cemerick-snapshots</id>
+      <id>vrecan-snapshots</id>
       <url>https://github.com/vrecan/mvn-repo/raw/master/snapshots</url>
     </repository>   
   </repositories>
