--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
       <artifactId>jackson-mapper-asl</artifactId>
       <version>1.9.8</version>
     </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.0.0</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>    
                 
   </dependencies>
   
