initial working consumer & producer does not resend or consume responses yet

--- a/conf/boomerang.conf
+++ b/conf/boomerang.conf
@@ -1,3 +1,9 @@
-activemq.connection.url=tcp://localhost:61616?jms.prefetchPolicy.all=5
-activemq.connection.queue=boomerangQ
-activemq.connection.timeout=2000
+mq.connection.url=tcp://localhost:61616?jms.prefetchPolicy.all=5
+mq.connection.timeout=2000
+mq.processing.queue=boomerangQ
+mq.response.queue=boomerangResponseQ
+
+boomerang.date.label=boomDate
+boomerang.uuid.label=boomUuid
+boomerang.producer.label=boomQueues
+
