first end to end working... first response deletes message, does not check if all queues responded

--- a/conf/boomerang.conf
+++ b/conf/boomerang.conf
@@ -1,4 +1,4 @@
-appname=boomerang
+app.name=boomerang
 mq.connection.url=tcp://localhost:61616?jms.prefetchPolicy.all=5
 mq.connection.timeout=2000
 mq.processing.queue=boomerangQ
