Add basic resender... major problem with Message object it creates UUIDs and dates. This needs to be fixed

--- a/conf/boomerang.conf
+++ b/conf/boomerang.conf
@@ -9,5 +9,9 @@ data.redis.url=localhost
 
 boomerang.date.label=boomDate
 boomerang.uuid.label=boomUuid
+boomerang.retry.label=boomRetry
 boomerang.producer.label=boomQueues
+
+#Resend timeout, if a message is older then this it will be automatically resent
+boomerang.resend.seconds=60
 
