Add TTL, conf options for resend & ttl timers known bug, as soon as any response message is returns the message is deleted even if it sent it to multiple queues

--- a/conf/boomerang.conf
+++ b/conf/boomerang.conf
@@ -6,12 +6,17 @@ mq.response.queue=boomerangResponseQ
 
 data.redis.url=localhost
 
-
+#JSON field names
 boomerang.date.label=boomDate
 boomerang.uuid.label=boomUuid
 boomerang.retry.label=boomRetry
 boomerang.producer.label=boomQueues
 
-#Resend timeout, if a message is older then this it will be automatically resent
-boomerang.resend.seconds=60
+boomerang.producer.ttl.default=60000
+#boomerang.producer.ttl.queuename=60000
 
+#Resend timeout, if a message is older then this it will be automatically resent
+boomerang.resend.default=65000
+
+#not implemented yet!
+#boomerang.resend.queuename=60000
