--- a/conf/boomerang.conf
+++ b/conf/boomerang.conf
@@ -11,6 +11,7 @@ boomerang.date.label=boomDate
 boomerang.uuid.label=boomUuid
 boomerang.retry.label=boomRetry
 boomerang.producer.label=boomQueues
+boomerang.success.label=boomSuccess
 
 boomerang.producer.ttl.default=60000
 #boomerang.producer.ttl.queuename=60000
