Add fail messages after n retries

--- a/conf/boomerang.conf
+++ b/conf/boomerang.conf
@@ -18,6 +18,7 @@ boomerang.producer.ttl.default=60000
 
 #Resend timeout, if a message is older then this it will be automatically resent
 boomerang.resend.default=65000
+boomerang.resend.retry=2
 
 #not implemented yet!
 #boomerang.resend.queuename=60000
