refactoring required to be able to have response queue in our message

--- a/conf/boomerang.conf
+++ b/conf/boomerang.conf
@@ -11,7 +11,9 @@ boomerang.date.label=boomDate
 boomerang.uuid.label=boomUuid
 boomerang.retry.label=boomRetry
 boomerang.producer.label=boomQueues
-boomerang.success.label=boomSuccess
+
+boomerang.response.queue.label=boomRQueue
+boomerang.response.success.label=boomSuccess
 
 boomerang.producer.ttl.default=60000
 #boomerang.producer.ttl.queuename=60000
