--- a/conf/boomerang.conf
+++ b/conf/boomerang.conf
@@ -15,11 +15,12 @@ boomerang.producer.label=boomQueues
 boomerang.response.queue.label=boomRQueue
 boomerang.response.success.label=boomSuccess
 
-boomerang.producer.ttl.default=60000
+boomerang.producer.ttl.default=30000
+#not implemented yet!
 #boomerang.producer.ttl.queuename=60000
 
 #Resend timeout, if a message is older then this it will be automatically resent
-boomerang.resend.default=65000
+boomerang.resend.default=35000
 boomerang.resend.retry=2
 
 #not implemented yet!
